[package]
name = "habit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking", "multi-threaded"] }
bevy_egui = { version = "0.26.0", features = ["serde"] }
bevy_xpbd_2d = "0.4.2"
bevy-inspector-egui = { version = "0.23.4", features = ["highlight_changes"], optional = true }

[features]
debug = ["dep:bevy-inspector-egui"]

# ==============================================================================
# The following optimization options are REQUIRED to compile on Windows
# see https://github.com/bevyengine/bevy-website/issues/131#issuecomment-1444603162
# ------------------------------------------------------------------------------
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# ==============================================================================